
Package org.springframework.webflow.executor
* JSF integration code now manages flow execution locks properly in exceptional situations and when the
  RENDER RESPONSE phase is bypassed (SWF-302).
* Restored compatability with 1.0.1 allowing default navigation rules to be queried if no transition could
  be matched against the state of the current flow execution (SWF-303).

Changes in version 1.0.3 (24.04.2007)
-------------------------------------

Package org.springframework.webflow.executor
* PortletFlowController now correctly handles flow redirection parameters (SWF-236).
* SWF-JSF: FlowExecution refresh no longer causes a new flow execution key to be generated (SWF-291).
* SWF-JSF: Restored capability to launch a new flow within an ongoing flow using a UICommand (SWF-290).

Changes in version 1.0.2 (10.04.2007)
-------------------------------------

Package org.springframework.binding
* GenericConversionService.getConversionExecutor() now uses isAssignableFrom to detect situations where no
  conversion is necessary (SWF-264).
* Fixed possbile NullPointerException in MethodKey.parameterTypesString() (SWF-265).
* OgnlExpression now unwraps the ognl.OgnlException to make the real exception available to the caller (SWF-255).
* OgnlExpressionParser now supports OGNL collection construction syntax (SWF-274).
* AbstractExpressionParser now has a doParseSettableExpression() template method.
* MethodInvoker now unwraps an InvocationTargetException to make the target exception directly available as
  the cause of a MethodInvocationException.
  
Package org.springframework.webflow.action
* FormAction methods doBind() and createBinder() now declare "throws Exception".
* FormAction now consistently uses the getters to get property values (SWF-251).
* FormAction now allows usage of a validator when the formObjectClass is null.
* ResultObjectBasedEventFactory now uses java.lang.Enum.name() to get the name of a Java 5 enum (SWF-250).
